--- a/jump_roptato.html
+++ b/jump_roptato.html
@@ -59,11 +59,11 @@
 
       <div class="jump_rope_up"></div>
 
-      <div class="jump_rope_center"></div>
-
       <div class="jump_rope_down"></div>
 
       <div class="sweat_right"></div>
+
+      <div class="sweat_center"></div>
 
       <div class="sweat_left"></div>
     </div>
