--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jump_roptato</title>
+    <title>Jump_Roptato</title>
   </head>
-  <link rel="stylesheet" href="jump_roptato.css" />
+  <link rel="stylesheet" href="style.css" />
 
   <body>
     <div class="jump_roptato">
